# rust-image-manip

./: Cargo.toml  README.md
src/: lib.rs
src/utils/: file_funcs.rs  mod.rs
